fix an issue with favorites popup cropping in skinny screen mode

--- a/styles/favs.less
+++ b/styles/favs.less
@@ -78,6 +78,22 @@ ul.favs-menu h3 {
   clear: both;
 }
 
+.favorite {
+  height: 110px;
+  width: 90%;
+  padding: 16.5px 33px;
+  margin-top: -55px;
+  margin-left: -45%;
+}
+
+.favorite p {
+  margin: .5em 0;
+}
+
+.favorite p a {
+  .link1;
+}
+
 @media (min-width: @screen-sm-min) {
   .project #collection-textile ul.list > li,
   .project #collection-leather ul.list > li,
@@ -86,6 +102,12 @@ ul.favs-menu h3 {
     width: 33.333333333%;
     height: 150px;
   }
+
+  .favorite {
+    width: 280px;
+    margin-left: -140px;
+  }
+
 }
 
 @media (min-width: @screen-md-min) {
@@ -107,18 +129,3 @@ ul.favs-menu h3 {
   }
 }
 
-.favorite {
-  height: 110px;
-  width: 280px;
-  padding: 16.5px 33px;
-  margin-top: -55px;
-  margin-left: -140px;
-}
-
-.favorite p {
-  margin: .5em 0;
-}
-
-.favorite p a {
-  .link1;
-}
